# integreat-chat-llm

./: .gitignore  README.md  integreat-chat.ini  pyproject.toml  requirements.txt
code/: descriptive_stats_data.py  rag_pipeline.py  vdb_milvus.py  vdb_weaviate.py
code/retrieval/: example_retriever.txt  retriever_example.py
code/retrieval/results/: all-MiniLM-L6-v2_1.txt  all-MiniLM-L6-v2_2.txt  all-mpnet-base-v2_0.txt  e5-base-v2_1.txt  mxbai-embed-large-v1_1.txt
data/muenchen_en/: 1582004.txt  1626998.txt  1635014.txt  1635928.txt  1636722.txt  1655005.txt  1655035.txt  1655519.txt  1663167.txt  1721060.txt  1756205.txt  1756287.txt  1756297.txt  1799863.txt  1800267.txt  1801003.txt  1801096.txt  1801368.txt  1801589.txt  1802067.txt  1802391.txt  1802777.txt  1802857.txt  1803005.txt  1803057.txt  1803094.txt  1803673.txt  1804503.txt  1804598.txt  1804631.txt  2021718.txt  2021723.txt  2089870.txt  2090666.txt  2090675.txt  2165662.txt  2190715.txt  2295135.txt  2498348.txt  2498765.txt  (+190 more)
integreat_chat/: manage.py
integreat_chat/chatanswers/: apps.py  urls.py  utils.py  views.py
integreat_chat/chatanswers/services/: answer.py  answer_service.py  config.json  language.py  litellm.py  llmapi.py  milvus.py  query_transformer.py  search.py
integreat_chat/chatanswers/static/: language_code_map.py  messages.py  prompts.py
integreat_chat/chatanswers/utils/: integreat_cms.py  rag_request.py  rag_response.py
integreat_chat/core/: asgi.py  settings.py  urls.py  wsgi.py
integreat_chat/core/static/: region_language_map.py
integreat_chat/core/utils/: integreat_cms.py  integreat_request.py
integreat_chat/keywords/: apps.py  urls.py  views.py
integreat_chat/search/: urls.py  views.py
integreat_chat/search/management/commands/: delete_model_group.py  index_pages.py  index_region.py  opensearch_setup.py  search.py  update_search_pipeline.py
integreat_chat/search/services/: milvus.py  opensearch.py  search.py
integreat_chat/search/utils/: search_request.py  search_response.py
integreat_chat/translate/: urls.py  views.py
integreat_chat/translate/services/: language.py
integreat_chat/translate/static/: language_classification_map.py  language_code_map.py  prompts.py
old/code/: data_extraction.py  rag_pipeline.py  vdb_milvus.py
old/code/retrieval/: embedding_models.json  retriever_performance.py  retriever_queries.json
old/code/retrieval/results/: GIST-Embedding-v0_0.txt  GIST-Embedding-v0_1.txt  GIST-Embedding-v0_2.txt  all-MiniLM-L6-v2_0.txt  all-mpnet-base-v2_1.txt  all-mpnet-base-v2_2.txt  e5-base-v2_0.txt  e5-base-v2_2.txt  mxbai-embed-large-v1_0.txt  mxbai-embed-large-v1_2.txt
old/data/muenchen_en/: 1654116.txt  1655499.txt  1721072.txt  1721086.txt  1756281.txt  1756282.txt  1798323.txt  1798959.txt  1799131.txt  1799156.txt  1799685.txt  1800655.txt  1800990.txt  1801316.txt  1801608.txt  1801782.txt  1802131.txt  1802153.txt  1802157.txt  1802581.txt  1803208.txt  1803447.txt  1803481.txt  1803802.txt  1803832.txt  1803837.txt  2021709.txt  2081871.txt  2087997.txt  2165680.txt  2295104.txt  2348596.txt  2433546.txt  2498746.txt  260832.txt  260862.txt  260892.txt  261367.txt  261524.txt  261726.txt  (+172 more)
